--- a/main.ipynb
+++ b/main.ipynb
@@ -53,6 +53,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key': 1}\n",
+      "ace_of_spades.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = dict()\n",
+    "a['key'] = 1\n",
+    "print(a)\n",
+    "print(card_list[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -254,6 +275,186 @@
    "source": [
     "a = 2.0\n",
     "print(str(int(a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"add\"\n",
+    "a == \"add\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a == np.inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(11/5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(2.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "2\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = list()\n",
+    "a.append(1)\n",
+    "a.append(2)\n",
+    "print(a)\n",
+    "print(a.pop())\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = list()\n",
+    "combi = range(1,5)\n",
+    "for first in combi:\n",
+    "    for second in combi:\n",
+    "        for third in combi:\n",
+    "            for forth in combi:\n",
+    "                test = np.zeros(4).astype(np.int)\n",
+    "                test[0] = first\n",
+    "                if second in test:\n",
+    "                    continue\n",
+    "                test[1] = second\n",
+    "                if third in test:\n",
+    "                    continue\n",
+    "                test[2] = third\n",
+    "                if forth in test:\n",
+    "                    continue\n",
+    "                test[3] = forth\n",
+    "                a.append(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1, 2, 3, 4]), array([1, 2, 4, 3]), array([1, 3, 2, 4]), array([1, 3, 4, 2]), array([1, 4, 2, 3]), array([1, 4, 3, 2]), array([2, 1, 3, 4]), array([2, 1, 4, 3]), array([2, 3, 1, 4]), array([2, 3, 4, 1]), array([2, 4, 1, 3]), array([2, 4, 3, 1]), array([3, 1, 2, 4]), array([3, 1, 4, 2]), array([3, 2, 1, 4]), array([3, 2, 4, 1]), array([3, 4, 1, 2]), array([3, 4, 2, 1]), array([4, 1, 2, 3]), array([4, 1, 3, 2]), array([4, 2, 1, 3]), array([4, 2, 3, 1]), array([4, 3, 1, 2]), array([4, 3, 2, 1])]\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "print(len(a))"
    ]
   },
   {
